--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1",
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20",
     "shortid": "^2.2.16",
     "slugify": "^1.6.5"
